[metadata]
name = zwj_hash
version = 0.0.1
description = Hash as zero-width-joined emojis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxsmns/zwj-hash
author = Max Simmons
author_email = max@mxsmns.net
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = zwj_hash
python_requires = >=3.7

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
